rds-vpc.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  AWS CloudFormation template that creates a VPC spanning three
  Availability Zones in the us-west-2 region and deploys
  an Amazon RDS MySQL instance.

Resources:

  # VPC Resource
  StudentVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: VPC-ninbel9067

  # Subnet in us-west-2a
  PublicSubnetAZ1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref StudentVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: us-west-2a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Subnet-AZ1-ninbel9067

  # Subnet in us-west-2b
  PublicSubnetAZ2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref StudentVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: us-west-2b
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Subnet-AZ2-ninbel9067

  # Subnet in us-west-2c
  PublicSubnetAZ3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref StudentVPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: us-west-2c
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Subnet-AZ3-ninbel9067

  # Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: IGW-ninbel9067

  # Attach Internet Gateway to VPC
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref StudentVPC
      InternetGatewayId: !Ref InternetGateway

  # Public Route Table
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref StudentVPC
      Tags:
        - Key: Name
          Value: Public-RT-ninbel9067

  # Default Route to Internet Gateway
  DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # Route Table Association for AZ1
  RouteAssociationAZ1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetAZ1
      RouteTableId: !Ref PublicRouteTable

  # Route Table Association for AZ2
  RouteAssociationAZ2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetAZ2
      RouteTableId: !Ref PublicRouteTable

  # Route Table Association for AZ3
  RouteAssociationAZ3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetAZ3
      RouteTableId: !Ref PublicRouteTable

  # Security Group for RDS
  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for MySQL RDS instance
      VpcId: !Ref StudentVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: RDS-SG-ninbel9067

  # RDS Subnet Group
  RDSSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for RDS instance
      SubnetIds:
        - !Ref PublicSubnetAZ1
        - !Ref PublicSubnetAZ2
        - !Ref PublicSubnetAZ3
      Tags:
        - Key: Name
          Value: RDS-SubnetGroup-ninbel9067

  # Amazon RDS MySQL Instance
  RdsInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceIdentifier: playground-db
      Engine: mysql
      DBInstanceClass: db.t3.micro
      AllocatedStorage: '5'
      MasterUsername: Admin
      MasterUserPassword: CloudAcademy123!
      VPCSecurityGroups:
        - !GetAtt RDSSecurityGroup.GroupId
      DBSubnetGroupName: !Ref RDSSubnetGroup
      PubliclyAccessible: false

Outputs:

  VPCId:
    Description: ID of the created VPC
    Value: !Ref StudentVPC

  VPCName:
    Description: Name tag applied to the VPC
    Value: VPC-ninbel9067

  Subnet1:
    Description: Subnet in us-west-2a
    Value: !Ref PublicSubnetAZ1

  Subnet2:
    Description: Subnet in us-west-2b
    Value: !Ref PublicSubnetAZ2

  Subnet3:
    Description: Subnet in us-west-2c
    Value: !Ref PublicSubnetAZ3

  RDSInstanceId:
    Description: RDS Instance Identifier
    Value: !Ref RdsInstance

  RDSEndpoint:
    Description: RDS Endpoint Address
    Value: !GetAtt RdsInstance.Endpoint.Address
